<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Gig Is Up</string>

    <!-- menu actions -->
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search for an event</string>
    <string name="search_results">Search results</string>



    <!-- fragment names -->
    <string name="frag_featured">Featured</string>
    <string name="frag_artists">Artists</string>
    <string name="frag_bookings">Bookings</string>
    <string name="frag_checkout">Checkout</string>

    <string name="frag_events">Events</string>
    <string name="frag_settings">Settings</string>

    <!-- drawer -->
    <string-array name="drawer_array">
        <item>@string/frag_featured</item>
        <item>@string/frag_artists</item>
        <item>@string/frag_bookings</item>
        <item>@string/frag_events</item>
        <item>@string/frag_settings</item>
    </string-array>

    <string name = "standing">Standing</string>
    <string name = "stalls">Stalls</string>
    <string name = "circle">Circle</string>
    <string name = "upper_circle">Upper Circle</string>

    <!-- misc -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="artist_search">Events by this artist</string>

    <!-- featured -->
    <string name="hot">HOT</string>
    <string name="upcoming">UPCOMING</string>

    <!-- login -->
    <string name="login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="signup">Not got an account? Sign up here</string>
    <string name="forgot">Forgot password?</string>

    <!-- registration -->
    <string name="registration">Registration</string>
    <string name="fill_details">Please fill in the following details to create your account:</string>
    <string name="location">Location</string>
    <string name="sign_up">Sign up</string>

    <!-- card -->
    <string name="card_name">Card Name\u00A0\u00A0</string>
    <string name="card_number">Card Number\u00A0\u00A0</string>
    <string name="expiry_date">Expiry Date\u00A0\u00A0</string>
    <string name="security_number">Security Number\u00A0\u00A0</string>
    <string name="billing_address">Billing Address\u00A0\u00A0</string>
    <string name="add_card">Add card details\u00A0\u00A0</string>


</resources>
