<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="50dp"
    android:paddingBottom="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="30dp">

        <FrameLayout
            android:layout_width="110dp"
            android:layout_height="110dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/circle"/>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/avatarnote"
                android:layout_gravity="center"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">
            <EditText
                android:id="@+id/log_et_username"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:hint="@string/username_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/color_darker_gray"
                android:backgroundTint="@color/color_dark_gray"/>

            <EditText android:id="@+id/log_et_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:hint="@string/password_hint"
                android:inputType ="textPassword"
                android:textColor="@color/color_darker_gray"/>
        </LinearLayout>

        <Button
            android:id="@+id/log_bn_login"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:text="@string/login"
            android:onClick="onClick"
            style="@style/SmallButtonTheme"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/log_tv_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_text_size"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/signup"
            android:gravity="center"
            android:paddingTop="15dp"/>

        <TextView
            android:id="@+id/log_tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_text_size"
            android:onClick="onClick"
            android:clickable="true"
            android:text="@string/forgot"
            android:gravity="center"
            android:paddingTop="5dp"/>

    </LinearLayout>

</LinearLayout>