<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.dolphin.thegigisup.CardFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="35dp"
            android:textSize="@dimen/small_text_size">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/card_tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_name"
                    style="@style/SmallLabels"/>
            <EditText
                    android:id="@+id/card_et_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_darker_gray"
                    style="@style/EditTextTheme"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/card_tv_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_number"
                    style="@style/SmallLabels"/>
            <EditText
                    android:id="@+id/card_et_number"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    style="@style/EditTextTheme"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/card_tv_exp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expiry_date"
                    style="@style/SmallLabels"/>
            <Spinner
                    android:id="@+id/card_sp_month"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    style="@style/SmallLabelsValuesSpinner"/>

            <Spinner
                    android:id="@+id/card_sp_year"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/SmallLabelsValuesSpinner"/>

            <TextView
                    android:id="@+id/card_tv_exper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/Widget.EditText"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/card_tv_sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/security_number"
                    style="@style/SmallLabels"/>
            <EditText
                    android:id="@+id/card_et_sec"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    style="@style/EditTextTheme"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="horizontal">
            <TextView
                    android:id="@+id/card_tv_addr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/billing_address"
                    style="@style/SmallLabels"/>

            <EditText
                    android:id="@+id/card_et_add"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    style="@style/EditTextTheme"/>
        </LinearLayout>

        <Button
                android:id="@+id/card_but_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/add_card"
                style="@style/SmallButtonTheme"/>

    </LinearLayout>

</FrameLayout>
